--- a/CRUD+Login/projectnew/templates/home.html
+++ b/CRUD+Login/projectnew/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmazonPrimeVideo</title>
+    <title>Sai Info Solution</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
     
@@ -34,7 +34,7 @@
           justify-content: space-around;
           align-items: center;
           background-color: #f5f5f5;
-          margin-right: 20px;
+          margin-right: 250px;
         }
     
         .nav-items a {
@@ -197,18 +197,16 @@
 
     
   <header class="header">
-    <a href="#" class="logo">Developer</a>
+    <a href="#" class="logo">Sai Info</a>
     <nav class="nav-items">
     <div><a href="login">Login</a></div>
     <div><a href="registerform">Register</a></div>
-    <div><a href="">Amazon_Prime_Paid</a></div>
-    <!-- <div><a href="viewdata">View_data</a></div> -->
     </nav>
   </header>
   <main>
     <div class="intro">
-      <h1>A Backend Developer</h1>
-      <p>I am a Backend developer and I love to create websites.</p>
+      <h1>Sai Info Solution</h1>
+      <p>Sai Info Solution provide to create a excellent websites.</p>
       <button>Learn More</button>
     </div>
     <div class="achievements">
