--- a/CRUD+Login/projectnew/templates/register.html
+++ b/CRUD+Login/projectnew/templates/register.html
@@ -50,7 +50,7 @@ hr {
 <form action="{% url 'data' %}" method="post">  
   {% csrf_token %}
   <div class="container">  
-  <center>  <h1> Student Registeration Form</h1> </center>  
+  <center>  <h1> Sai Info Solution Form</h1> </center>  
   <hr>  
   <label> Firstname </label>   
 <input type="text" name="firstname" placeholder= "Firstname" size="15" required />   
@@ -58,30 +58,6 @@ hr {
 <input type="text" name="middlename" placeholder="Middlename" size="15" required />   
 <label> Lastname: </label>    
 <input type="text" name="lastname" placeholder="Lastname" size="15"required />   
-<!-- <div>  
-<label>   
-Course :  
-</label>   
-  
-<select>  
-<option value="Course">Course</option>  
-<option value="BCA">BCA</option>  
-<option value="BBA">BBA</option>  
-<option value="B.Tech">B.Tech</option>  
-<option value="MBA">MBA</option>  
-<option value="MCA">MCA</option>  
-<option value="M.Tech">M.Tech</option>  
-</select>  
-</div>   -->
-<!-- <div>  
-<label>   
-Gender :  
-</label><br>  
-<input type="radio" value="Male" name="gender" checked > Male   
-<input type="radio" value="Female" name="gender"> Female   
-<input type="radio" value="Other" name="gender"> Other  
-  
-</div>   -->
 <label>   
 Phone :  
 </label>  
